fix: Adjust elements to flex 1 to prevent collapse

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ button:active {
 .number,
 .total {
   display: block;
+  flex: 1;
 }
 .total {
   font-size: 3rem;
